# super_squares

./: README.md
super_squares/: LICENSE  README.md  setup.cfg
super_squares/supersquares/: squares.py
super_squares/supersquares.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
