[metadata]

name = supersquares
version = 0.0.1
author = Sammy Pardes
author_email = sammy.pardes@syr.edu
description = Create Super Bowl squares
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/slpardes/supersquares
classifiers = 
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License 
    Operating System :: OS Independent

[options]

packages = find:
python_requirements = >= 3.7
include_package_data = True
